--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   syncfusion_flutter_charts: ^21.1.39
   excel: 2.1.0
+  file_picker: ^5.2.9
+
 
 
   # The following adds the Cupertino Icons font to your application.
